compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_result_stmt_in_procedure_err.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: proc q result 0 end q
---
"q"@(FileId(1), 5..6) [Subprogram(Procedure)]: procedure -> void
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 7..15): cannot use `result` here
| error for (FileId(1), 7..15): `result` statement is only allowed in function bodies
