compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_result_stmt_in_process_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: proc q result 0 end q
---
"q"@(FileId(1), 5..6) [Subprogram(Procedure)]: procedure -> void
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 7..15: cannot use `result` here
| error in file FileId(1) for 7..15: `result` statement is only allowed in function bodies
