compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_result_stmt_mismatched_types.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "fcn oeuf : int result 'egg' end oeuf"
---
"oeuf"@"src/main.t:4..8" [Subprogram(Function)]: function -> int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:22..27: mismatched types
| note for src/main.t:22..27: this is of type `char(3)`
| note for src/main.t:11..14: function expects type `int`
| info: `char(3)` is not assignable into `int`
