compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_result_stmt_wrong_value_result.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "fcn b : int type k : int result k end b"
---
"b"@(FileId(1), 4..5) [Subprogram(Function)]: function -> int
"k"@(FileId(1), 17..18) [Type]: alias[DefId(PackageId(0), LocalDefId(1))] of int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 32..33): cannot use `k` as an expression
| error for (FileId(1), 32..33): `k` is a reference to a type, not a variable
| note for (FileId(1), 17..18): `k` declared here
