compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_return_stmt_in_function_err.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "fcn oeuf : int return end oeuf"
---
"oeuf"@"src/main.t:4..8" [Subprogram(Function)]: function -> int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:15..21: cannot use `return` here
| error for src/main.t:15..21: `result` statement is used to return values in function bodies
