compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_set_cons_call_all.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type s : set of boolean\nvar _ := s(all)\n"
---
"s"@(FileId(1), 5..6) [Type]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"s"@(FileId(1), 9..23) [Set]: <error>
"_"@(FileId(1), 28..29) [ConstVar(Var, No)]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"<root>"@(dummy) [Module(No)]: <error>

