compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_set_cons_call_all_err_extra_arg_end_range.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type s : set of boolean\nvar _ := s(*, all, b .. * - b)\n"
---
"s"@(FileId(1), 5..6) [Type]: set[DefId(PackageId(0), LocalDefId(1))] of boolean
"s"@(FileId(1), 9..23) [Set]: <error>
"_"@(FileId(1), 28..29) [ConstVar(Var, No)]: set[DefId(PackageId(0), LocalDefId(1))] of boolean
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 33..34: constructor call has extra arguments
| error in file FileId(1) for 33..34: call has extra arguments
| note in file FileId(1) for 38..41: this `all` also covers the rest of the arguments
error in file FileId(1) at 35..36: cannot use range expression here
| error in file FileId(1) for 35..36: range expressions aren't supported in set constructors
error in file FileId(1) at 43..53: cannot use range expression here
| error in file FileId(1) for 43..53: range expressions aren't supported in set constructors
