compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_set_cons_call_all_err_extra_args_before.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type s : set of boolean\nvar b : boolean\nvar _ := s(b, b, b, b, all)\n"
---
"s"@"src/main.t:5..6" [Type]: set[DefId(PackageId(0), LocalDefId(1))] of boolean
"s"@"src/main.t:9..23" [Set]: <error>
"b"@"src/main.t:28..29" [ConstVar(Var, No)]: boolean
"_"@"src/main.t:44..45" [ConstVar(Var, No)]: set[DefId(PackageId(0), LocalDefId(1))] of boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:49..50: constructor call has extra arguments
| error for src/main.t:49..50: call has extra arguments
| note for src/main.t:63..66: this `all` also covers the rest of the arguments
