compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_set_cons_call_all_err_wrong_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type s : set of boolean\nvar _ := s(all, 1)\n"
---
"s"@(FileId(1), 5..6) [Type]: set[DefId(PackageId(0), LocalDefId(1))] of boolean
"s"@(FileId(1), 9..23) [Set]: <error>
"_"@(FileId(1), 28..29) [ConstVar(Var, No)]: set[DefId(PackageId(0), LocalDefId(1))] of boolean
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 33..34: constructor call has extra arguments
| error in file FileId(1) for 33..34: call has extra arguments
| note in file FileId(1) for 35..38: this `all` also covers the rest of the arguments
error in file FileId(1) at 40..41: mismatched types
| note in file FileId(1) for 40..41: this is of type `{integer}`
| note in file FileId(1) for 40..41: parameter expects type `boolean`
| info: `{integer}` is not assignable into `boolean`
